--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
     "preview": "vite preview",
     "lint": "eslint .",
     "lint:fix": "eslint -fix .",
@@ -19,6 +20,7 @@
     "@testing-library/jest-dom": "^6.4.8",
     "@testing-library/user-event": "^14.5.2",
     "@types/redux-mock-store": "^1.0.6",
+    "next": "^14.2.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
@@ -29,6 +31,7 @@
     "@eslint/js": "^9.6.0",
     "@testing-library/dom": "^10.3.2",
     "@testing-library/react": "^16.0.0",
+    "@types/node": "22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
@@ -42,12 +45,11 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "globals": "^15.8.0",
-    "husky": "^9.0.11",
+    "husky": "^9.1.4",
     "jsdom": "^24.1.0",
     "prettier": "^3.3.2",
     "typescript": "^5.2.2",
     "typescript-eslint": "^7.15.0",
-    "vite": "^5.3.1",
-    "vitest": "^2.0.4"
+    "vite": "^5.3.1"
   }
 }
